--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Apollo specific ignores
+
+# default output directory
+out
+
+# log directory and log files from --log flag
+out/logs
+*.log
