Updated .gitignore Added user settings for apollo file icons (no reflected on remote repo)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "*.sun": "rust",
+        "apollo.lib": "toml",
+        ".apollo": "toml"
+    },
+    "workbench.iconTheme": "material-icon-theme",
 }
